fix(topic landing search): clip overflowing suggestions and put rainbow behind search box

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -4916,10 +4916,11 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
   max-height: calc(1.9em * 10 + 2em); /* 2.5em is an estimate of the height per suggestion, and 2em for padding */
   z-index: 2;
   margin-top: 14px;
+  overflow-y: clip;
 }
 .topic-landing-search-dropdown:empty {
-    padding: 0;
-    visibility: hidden;
+  padding: 0;
+  visibility: hidden;
 }
 
 .topic-landing-search-container .readerNavMenuSearchButton{
@@ -4929,9 +4930,11 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
 .topic-landing-upper-rainbow{
   margin-top: 88px;
   margin-bottom: 43px;
+  z-index: 0;
 }
 .topic-landing-lower-rainbow{
   margin-top: 43px;
+  z-index: 0;
 }
 /*'Dummy' font, a hack to prevent the ellipsis char from being displayed at the end of a webkit line-clamped element*/
 /*This font addresses only the ellipsis char, rendering its size 0% */
